Pre loaded images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <script src="images.js"></script>
     <script src="info/info.js"></script>
 
-</head>
+    <link rel="preload" href="assets/Images/BatteryMiterSawCutting.jpg" as="image" type="image.jpg">
+    <link rel="preload" href="assets/Images/PrimaryM1Shot.jpg" as="image" type="image.jpg">
+    <link rel="preload" href="assets/Images/OutdoorCutting.jpg" as="image" type="image.jpg">
+
+</head> 
 <body onload="populateCarosel()" onscroll="infoEvents()">
     <!-- Header -->
     <header class="header-wrapper"> 
