Testing Load Time

--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
     <!-- Home -->
     <section id="home">
         <div class="home-carosel-wrapper">
-            <div class="home-carosel"></div>
+            <div class="home-carosel">
+                <img class="carosel-image current-slide" 
+                id='3'
+                src='assets/Branding-Logos/MainLogo.png'
+                alt='Square logo'
+            </div>
             <h1 class="carosel-title-one">Measure Once,</h1>
             <h1 class="carosel-title-two">Only Once.</h1>
         </div>
