New Starting image

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <div class="home-carosel">
                 <img class="carosel-image current-slide" 
                 id='3'
-                src='assets/Branding-Logos/MainLogo.png'
-                alt='Square logo'
+                src='assets/Branding-Logos/StartingDiv.jpg'
+                alt='Square logo'>
             </div>
             <h1 class="carosel-title-one">Measure Once,</h1>
             <h1 class="carosel-title-two">Only Once.</h1>
