Changeing type on preloaded images

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <script src="images.js"></script>
     <script src="info/info.js"></script>
 
-    <link rel="preload" href="assets/Images/BatteryMiterSawCutting.jpg" as="image" type="image.jpg">
-    <link rel="preload" href="assets/Images/PrimaryM1Shot.jpg" as="image" type="image.jpg">
-    <link rel="preload" href="assets/Images/OutdoorCutting.jpg" as="image" type="image.jpg">
+    <link rel="preload" href="assets/Images/BatteryMiterSawCutting.jpg" as="image" type="image">
+    <link rel="preload" href="assets/Images/PrimaryM1Shot.jpg" as="image" type="image">
+    <link rel="preload" href="assets/Images/OutdoorCutting.jpg" as="image" type="image">
 
 </head> 
 <body onload="populateCarosel()" onscroll="infoEvents()">
