--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="images.js"></script>
     <script src="info/info.js"></script>
 
+    <link rel="icon"  href="assets/Branding-Logos/reekonFavicon.jpg">
     <link rel="preload" href="assets/Images/BatteryMiterSawCutting.jpg" as="image" type="image">
     <link rel="preload" href="assets/Images/PrimaryM1Shot.jpg" as="image" type="image">
     <link rel="preload" href="assets/Images/OutdoorCutting.jpg" as="image" type="image">
